--- a/شی گرا.html
+++ b/شی گرا.html
@@ -66,7 +66,7 @@
         Increase your coding productivity with TabAI code completions! Tabnine
         is a free powerful Artificial Intelligence assistant designed to help
         you code faster, reduce mistakes, and discover best coding practices -
-        without ever leaving the comfort of VS Code. Tabnine is fdfv
+        without ever leaving the comfort of VS Code. Tabnine is fdfv ffdvfv
       </footer>
     </div>
   </body>
