--- a/شی گرا.html
+++ b/شی گرا.html
@@ -64,7 +64,7 @@
       </main>
       <footer>
         Increase your coding productivity with TabAI code completions! Tabnine
-        is a free powerful Artificial Intelligence assistant designed to help
+        is a free powerful Artificial Intelligence assistant designed to helpdc
         you code faster, reduce mistakes, and discover best coding practices -
         without ever leaving the comfort of VS Code. Tabnine is fdfv ffdvfv vvdcc
       </footer>
